--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,9 @@
 .animation{
     @apply  transition-transform duration-300 ease-in-out hover:scale-150
 }
+
+@layer base {
+     body {
+        font-family: 'Ethereal', sans-serif;
+     }
+}
